# agenet

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  SECURITY.md
.beads/: issues.jsonl
crates/agenet-efl/: Cargo.toml
crates/agenet-efl/src/: attestation.rs  credits.rs  deposit.rs  dynamic_pow.rs  lib.rs
crates/agenet-identity/: Cargo.toml
crates/agenet-identity/src/: delegation.rs  e2ee.rs  keypair.rs  keystore.rs  lib.rs  session.rs
crates/agenet-object/: Cargo.toml
crates/agenet-object/src/: canonical.rs  lib.rs  object.rs  schema.rs
crates/agenet-pow/: Cargo.toml
crates/agenet-pow/src/: challenge.rs  lib.rs  solver.rs  verifier.rs
crates/agenet-relay/: Cargo.toml
crates/agenet-relay/src/: abuse.rs  config.rs  error.rs  federation.rs  lib.rs  merkle.rs  policy.rs  routes.rs  server.rs  storage.rs  subscription.rs
crates/agenet-relay/tests/: integration.rs
crates/agenet-sdk/: Cargo.toml
crates/agenet-sdk/src/: client.rs  lib.rs
crates/agenet-types/: Cargo.toml
crates/agenet-types/src/: lib.rs
