[workspace]
resolver = "2"
members = [
    "crates/agenet-types",
    "crates/agenet-identity",
    "crates/agenet-object",
    "crates/agenet-pow",
    "crates/agenet-relay",
    "crates/agenet-efl",
    "crates/agenet-sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Crypto
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
x25519-dalek = { version = "2", features = ["serde", "static_secrets"] }
sha2 = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP / WebSocket
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Storage
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hex encoding
hex = "0.4"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Testing
tokio-tungstenite = "0.26"

# Internal crates
agenet-types = { path = "crates/agenet-types" }
agenet-identity = { path = "crates/agenet-identity" }
agenet-object = { path = "crates/agenet-object" }
agenet-pow = { path = "crates/agenet-pow" }
agenet-relay = { path = "crates/agenet-relay" }
agenet-efl = { path = "crates/agenet-efl" }
agenet-sdk = { path = "crates/agenet-sdk" }
