[package]
name = "agenet-efl"
version.workspace = true
edition.workspace = true

[dependencies]
agenet-types = { workspace = true }
agenet-identity = { workspace = true }
agenet-pow = { workspace = true }
ed25519-dalek = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
