[package]
name = "agenet-identity"
version.workspace = true
edition.workspace = true

[dependencies]
agenet-types = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
sha2 = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
