[package]
name = "agenet-pow"
version.workspace = true
edition.workspace = true

[dependencies]
agenet-types = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
